--- a/frontend-main/cart.html
+++ b/frontend-main/cart.html
@@ -52,6 +52,7 @@
       <h4>Total: ₹<span id="cart-total">0</span></h4>
       <button id="checkout-btn" class="btn btn-success mt-2">Proceed to Checkout</button>
     </div>
+    <button onclick="checkout()">Pay Now</button> 
   </section>
 
   <!-- Simple Custom Modal -->
@@ -68,6 +69,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-outline-secondary" id="modal-remove-btn">Remove</button>
           <button type="button" class="btn btn-outline-danger" id="modal-move-btn">Move to Wishlist</button>
+          
         </div>
       </div>
     </div>
@@ -186,6 +188,7 @@
       });
     }
   });
+   
   </script>
   <!-- END new dynamic cart logic -->
 </body>
